--- a/public/client/templates/login.html
+++ b/public/client/templates/login.html
@@ -1,13 +1,13 @@
 <div >
   <h3 class="col-md-12 text-center page-header">LogIn</h3>
   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
-    <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
+    <form name="userForm" ng-submit="login(userForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
         <div class="form-group" show-errors>
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" lowercase required>
-          <div ng-messages="userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
+          <label for="email">Email</label>
+          <input type="email" id="username" name="email" class="form-control" ng-model="credentials.email" placeholder="Email" lowercase required>
+          <div ng-messages="userForm.email.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Email is required.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
