--- a/public/client/templates/signup.html
+++ b/public/client/templates/signup.html
@@ -3,6 +3,7 @@
   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
     <form name="userForm" ng-submit="signup(userForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
+
         <div class="form-group" show-errors>
           <label for="name">Name</label>
           <input type="text" id="name" name="name" class="form-control" ng-model="credentials.name" placeholder="First Name" required>
@@ -10,6 +11,7 @@
             <p class="help-block error-text" ng-message="required">Name is required.</p>
           </div>
         </div>
+
         <div class="form-group" show-errors>
           <label for="email">Email</label>
           <input type="email" id="email" name="email" class="form-control" ng-model="credentials.email" placeholder="Email" lowercase required>
@@ -18,28 +20,30 @@
             <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
           </div>
         </div>
-        
+
         <div class="form-group" show-errors>
-          <label for="password">Password</label>
-            <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password" popover="{{popoverMsg}}" popover-trigger="focus" password-validator required>
-          <div ng-messages="userForm.password.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Password is required.</p>
-            <div ng-repeat="passwordError in passwordErrors">
-              <p class="help-block error-text" ng-show="userForm.password.$error.requirements">{{passwordError}}</p>
-            </div>
+          <label for="mobile">Mobile</label>
+          <input type="text" id="mobile" name="mobile" class="form-control" ng-model="credentials.mobile" placeholder="Mobile No." required>
+          <div ng-messages="userForm.mobile.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Mobile no is required.</p>
           </div>
         </div>
-        <div class="form-group" ng-show="!userForm.password.$error.required">
-          <label>Password Requirements</label>
-          <progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></progressbar>
+
+        <div class="form-group" show-errors>
+          <label for="password">Password</label>
+            <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password"  required>
+          <div ng-messages="userForm.password.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Password is required.</p>
+          </div>
         </div>
+
         <div class="text-center form-group">
           <button type="submit" class="btn btn-primary">Signup</button>
           &nbsp; or&nbsp;
           <a ui-sref="login" class="show-signup">Login</a>
         </div>
-        <div ng-show="error" class="text-center text-danger">
-          <strong ng-bind="error"></strong>
+        <div ng-show="errorText" class="text-center text-danger">
+          <strong ng-bind="errorText"></strong>
         </div>
       </fieldset>
     </form>
