--- a/public/client/templates/admin-home.html
+++ b/public/client/templates/admin-home.html
@@ -1,6 +1,6 @@
-<section >
+<section ng-init="initAdmin()">
     <div class="row">
-      <div class="page-header"> Users </div>
+      <div class="page-header"> Adnim </div>
       <button type="button" class="btn btn-primary" ng-click="info()">info</button>
 
     </div>
