--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -48,3 +48,12 @@ body{
   line-height: 1.428571429;
   border-radius: 15px;
 }
+.upper-line{
+    border-top: 3px solid #ff0000;
+}
+.width_30{
+	width:30%
+}
+.width_5{
+	width:5%
+}
