--- a/public/client/templates/editProfile.html
+++ b/public/client/templates/editProfile.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-grey">
+<div class="container-fluid bg-grey" ng-init="loadUser()">
  <h2 class="text-center">Name</h2>
  <div class="row">
    <div class="col-sm-12">
