--- a/public/client/templates/home.html
+++ b/public/client/templates/home.html
@@ -1,18 +1,8 @@
-<section >
-
-  <!-- <div class="row">
-    <button type="button" class="btn btn-primary" ng-click="info()">info</button>
-  </div> -->
+<section ng-init="info()">
 <div class="container-fluid">
- <h2 class="text-center">Welcome Name</h2>
+ <h2 class="text-center">Welcome {{userName}}</h2>
  <div class="text-center">
    <img class="text-center" src="client/img/hawk.png" class="img-responsive" alt="Hawk">
 </div>
 </div>
-
-    <div class="row">
-      <div class="page-header"> Users </div>
-      <button type="button" class="btn btn-primary" ng-click="info()">info</button>
-    </div>
-
 </section>
