--- a/public/client/templates/edit-profile.html
+++ b/public/client/templates/edit-profile.html
@@ -14,7 +14,7 @@
 
           <div class="form-group " show-errors>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" class="form-control" ng-model="credentials.email" placeholder="Email" lowercase required>
+            <input ng-disabled="true" type="email" id="email" name="email" class="form-control" ng-model="credentials.email" placeholder="Email" lowercase required>
             <div ng-messages="userForm.email.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Email address is required.</p>
               <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
