--- a/public/client/templates/change-password.html
+++ b/public/client/templates/change-password.html
@@ -1,9 +1,16 @@
 <div class="container-fluid bg-grey" >
     <h3 class="col-md-12 text-center">Change Password</h3>
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
-      <form name="userForm" ng-submit="signup(userForm.$valid)" class="signin" novalidate autocomplete="off">
+      <form name="userForm" ng-submit="changePassword(userForm.$valid)" class="signin" novalidate autocomplete="off">
         <fieldset>
 
+          <div class="form-group" show-errors>
+            <label for="password">Password</label>
+              <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password"  required>
+            <div ng-messages="userForm.password.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Password is required.</p>
+            </div>
+          </div>
           <div class="form-group" show-errors>
             <label for="password">Password</label>
               <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password"  required>
