--- a/public/client/templates/admin-home.html
+++ b/public/client/templates/admin-home.html
@@ -18,7 +18,7 @@
       <td>{{user.name}}</td>
       <td>{{user.mobile}}</td>
       <td>{{user.email}}</td>
-      <td><button class="btn btn-sm btn-info" ui-sref="editProfile({userId:user.email})">Edit</button></td>
+      <td><button class="btn btn-sm btn-info" ui-sref="editUser({userId:user.email})">Edit</button></td>
       <td><button class="btn btn-sm btn-danger" ng-click="delete(user.email)">Delete</button></td>
     </tr>
 
